feat: init all pages

--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'Inter', sans-serif;
+    font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
+  }
+}
