feat: init new form

--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -8,4 +8,12 @@
     font-smoothing: antialiased;
     -webkit-font-smoothing: antialiased;
   }
+
+  html,
+  body,
+  body > div:first-child,
+  div#__next,
+  div#__next > div {
+    height: 100%;
+  }
 }
